--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/store
+spring.datasource.url=jdbc:mysql://localhost:3306/db_store
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
