--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 spring.datasource.url=jdbc:mysql://localhost:3306/db_order
 spring.datasource.username=root
 spring.datasource.password=root
