--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8080
+client.order.url=http://localhost:8081
+
 spring.datasource.url=jdbc:mysql://localhost:3306/db_store
 spring.datasource.username=root
 spring.datasource.password=root
