--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8081
+client.order.url=https://swapi.dev/api/
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_order
 spring.datasource.username=root
