Add Customer as Ordens

--- a/store/pom.xml
+++ b/store/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
-	<groupId>com.microservices-study</groupId>
+	<groupId>com.microservicestudy</groupId>
 	<artifactId>store</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>store</name>
