Add Caffeine Cache

--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=8081
+
 client.customer.url=https://swapi.dev/api/
+
+logging.level.config.FeignConfig = DEBUG
+feign.client.config.default.loggerLevel=full
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_order
 spring.datasource.username=root
