--- a/order/src/main/resources/application.properties
+++ b/order/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8081
 
 client.customer.url=https://swapi.dev/api/
 
+logging.level.com.microservicestudy.order.client.CustomerAPI=DEBUG
 feign.client.config.default.loggerLevel=full
 
 spring.datasource.url=jdbc:mysql://localhost:3306/db_order
